--- a/01_Lists.ipynb
+++ b/01_Lists.ipynb
@@ -17,6 +17,7 @@
       },
       "source": [
         "# Lists\n",
+        "--Pavel Bodle\n",
         "\n",
         "List is a collection data type which is ordered and mutable. Unlike Sets, Lists allow duplicate elements.\n",
         "They are useful for preserving a sequence of data and further iterating over it. Lists are created with square brackets.\n",
@@ -44,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
