added Linked List

--- a/2_linked_list.ipynb
+++ b/2_linked_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMK6IL2gKhejmhzzfNpabq0",
+      "authorship_tag": "ABX9TyMWw6bHbWxcbll9zlnug9QO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,16 +28,163 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Create a Single Node"
+      ],
+      "metadata": {
+        "id": "2ncRklJYZfJZ"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "3vUghh6HusrI"
       },
       "outputs": [],
       "source": [
-        "class Node(self, value):\n",
-        ""
+        "class Node:\n",
+        "\n",
+        "  def __init__(self,value):\n",
+        "    self.data = value\n",
+        "    self.next = None"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = Node(1)\n",
+        "b = Node(2)\n",
+        "c = Node(3)"
+      ],
+      "metadata": {
+        "id": "YFKGtQKeZMnm"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a.data,b.data,c.data)"
+      ],
+      "metadata": {
+        "id": "NbDkcpDIZlag",
+        "outputId": "7ca203e7-fe32-4dd6-cf77-7b35620ed669",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Linked the Nodes with Each other to make Linked List"
+      ],
+      "metadata": {
+        "id": "bbETKmDXZr8p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.next = b\n",
+        "b.next = c"
+      ],
+      "metadata": {
+        "id": "WKjh7rBdZpAU"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a.next, b.next, c.next)"
+      ],
+      "metadata": {
+        "id": "dgOXVOCuZ0GV",
+        "outputId": "d9e19987-437e-46c6-d060-5dd1840832bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<__main__.Node object at 0x79d21f6f5cd0> <__main__.Node object at 0x79d21f6f59d0> None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(int(0x79d21f6f5cd0), int(0x79d21f6f59d0))"
+      ],
+      "metadata": {
+        "id": "c3URDFkeZ9Sj",
+        "outputId": "1de9cf54-e572-43c8-f1b3-396dd943d9dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "133943377485008 133943377484240\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(id(a),id(b),id(c))"
+      ],
+      "metadata": {
+        "id": "1UoIcW8FaCzV",
+        "outputId": "60b3e570-1f96-4a92-fe9b-59aee075daae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "133943377484944 133943377485008 133943377484240\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "d4Syu4SJaR9w"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
