--- a/2_linked_list.ipynb
+++ b/2_linked_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMWw6bHbWxcbll9zlnug9QO",
+      "authorship_tag": "ABX9TyMPheeFfmAgC5cyw63m9S0w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,11 +70,11 @@
         "print(a.data,b.data,c.data)"
       ],
       "metadata": {
-        "id": "NbDkcpDIZlag",
-        "outputId": "7ca203e7-fe32-4dd6-cf77-7b35620ed669",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NbDkcpDIZlag",
+        "outputId": "7ca203e7-fe32-4dd6-cf77-7b35620ed669"
       },
       "execution_count": 4,
       "outputs": [
@@ -114,11 +114,11 @@
         "print(a.next, b.next, c.next)"
       ],
       "metadata": {
-        "id": "dgOXVOCuZ0GV",
-        "outputId": "d9e19987-437e-46c6-d060-5dd1840832bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dgOXVOCuZ0GV",
+        "outputId": "d9e19987-437e-46c6-d060-5dd1840832bf"
       },
       "execution_count": 6,
       "outputs": [
@@ -137,11 +137,11 @@
         "print(int(0x79d21f6f5cd0), int(0x79d21f6f59d0))"
       ],
       "metadata": {
-        "id": "c3URDFkeZ9Sj",
-        "outputId": "1de9cf54-e572-43c8-f1b3-396dd943d9dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "c3URDFkeZ9Sj",
+        "outputId": "1de9cf54-e572-43c8-f1b3-396dd943d9dc"
       },
       "execution_count": 8,
       "outputs": [
@@ -160,11 +160,11 @@
         "print(id(a),id(b),id(c))"
       ],
       "metadata": {
-        "id": "1UoIcW8FaCzV",
-        "outputId": "60b3e570-1f96-4a92-fe9b-59aee075daae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1UoIcW8FaCzV",
+        "outputId": "60b3e570-1f96-4a92-fe9b-59aee075daae"
       },
       "execution_count": 9,
       "outputs": [
@@ -178,10 +178,92 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Create **Linked List** from scratch."
+      ],
+      "metadata": {
+        "id": "RHIDMHT4fNEm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Node:\n",
+        "\n",
+        "  def __init__(self,value):\n",
+        "    self.data = value\n",
+        "    self.next = None"
+      ],
+      "metadata": {
+        "id": "d4Syu4SJaR9w"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class LinkedList:\n",
+        "\n",
+        "  def __init__(self):\n",
+        "    # Empty Linked List\n",
+        "    self.head = None\n",
+        "    self.tail = None\n",
+        "    # no of nodes in the LL\n",
+        "    self.n = 0\n",
+        "\n",
+        "  def __len__(self):\n",
+        "    return self.n"
+      ],
+      "metadata": {
+        "id": "9ujXlotwgeJc"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l = LinkedList()"
+      ],
+      "metadata": {
+        "id": "bK_VceCvgpWs"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(l)"
+      ],
+      "metadata": {
+        "id": "u8U2Oocvgvux",
+        "outputId": "57652d95-563b-4fbb-fc13-bd5caab50964",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "d4Syu4SJaR9w"
+        "id": "20G0H8ffgyvv"
       },
       "execution_count": null,
       "outputs": []
