added linked list

--- a/2_linked_list.ipynb
+++ b/2_linked_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMPheeFfmAgC5cyw63m9S0w",
+      "authorship_tag": "ABX9TyMk/k7GJPg/99PXdXPOEmL3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -190,7 +190,6 @@
       "cell_type": "code",
       "source": [
         "class Node:\n",
-        "\n",
         "  def __init__(self,value):\n",
         "    self.data = value\n",
         "    self.next = None"
@@ -198,64 +197,80 @@
       "metadata": {
         "id": "d4Syu4SJaR9w"
       },
-      "execution_count": 10,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "class LinkedList:\n",
-        "\n",
+        "class Linkedlist:\n",
         "  def __init__(self):\n",
-        "    # Empty Linked List\n",
-        "    self.head = None\n",
-        "    self.tail = None\n",
-        "    # no of nodes in the LL\n",
-        "    self.n = 0\n",
+        "    self.head = None # Empty Linked List\n",
+        "    self.n = 0  # no of nodes in the LL\n",
         "\n",
-        "  def __len__(self):\n",
-        "    return self.n"
+        "  def __len__(self):  #length of LL\n",
+        "    return self.n\n",
+        "\n",
+        "  def insert_head(self, value):\n",
+        "    new_node = Node(value) # new node\n",
+        "    new_node.next = self.head # create connection\n",
+        "    self.head = new_node # reassign head\n",
+        "    self.n = self.n + 1 # increment n"
       ],
       "metadata": {
         "id": "9ujXlotwgeJc"
       },
-      "execution_count": 11,
+      "execution_count": 41,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "l = LinkedList()"
+        "L = Linkedlist()"
       ],
       "metadata": {
         "id": "bK_VceCvgpWs"
       },
-      "execution_count": 12,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "len(l)"
+        "L.insert_head(1)\n",
+        "L.insert_head(10)\n",
+        "L.insert_head(100)\n",
+        "L.insert_head(1000)"
       ],
       "metadata": {
-        "id": "u8U2Oocvgvux",
-        "outputId": "57652d95-563b-4fbb-fc13-bd5caab50964",
+        "id": "20G0H8ffgyvv"
+      },
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(L)"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "u8U2Oocvgvux",
+        "outputId": "410178fe-60e6-48d9-d089-f1dc262ec1df"
       },
-      "execution_count": 13,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0"
+              "5"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 51
         }
       ]
     },
@@ -263,7 +278,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "20G0H8ffgyvv"
+        "id": "YWVOGc1J0GZo"
       },
       "execution_count": null,
       "outputs": []
