created complete LL

--- a/2_linked_list.ipynb
+++ b/2_linked_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMk/k7GJPg/99PXdXPOEmL3",
+      "authorship_tag": "ABX9TyM27IVKZSzrrBtR+nDM+/gL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,7 +197,7 @@
       "metadata": {
         "id": "d4Syu4SJaR9w"
       },
-      "execution_count": 29,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -208,19 +208,156 @@
         "    self.head = None # Empty Linked List\n",
         "    self.n = 0  # no of nodes in the LL\n",
         "\n",
-        "  def __len__(self):  #length of LL\n",
+        "#length of LL ---------------------------------------------------\n",
+        "  def __len__(self):\n",
         "    return self.n\n",
         "\n",
+        "## add head in empty LL -----------------------------------------\n",
         "  def insert_head(self, value):\n",
         "    new_node = Node(value) # new node\n",
         "    new_node.next = self.head # create connection\n",
         "    self.head = new_node # reassign head\n",
-        "    self.n = self.n + 1 # increment n"
+        "    self.n = self.n + 1 # increment n\n",
+        "\n",
+        "## print LL ------------------------------------------------------\n",
+        "  def __str__(self):\n",
+        "    curr = self.head\n",
+        "    result = ''\n",
+        "\n",
+        "    while curr != None:\n",
+        "      result = result + str(curr.data) + '->'\n",
+        "      curr = curr.next\n",
+        "    return result[:-2]\n",
+        "\n",
+        "## append data in LL  (from last/tail node) -----------------------\n",
+        "  def append(self,value):\n",
+        "    new_node = Node(value)\n",
+        "\n",
+        "    if self.head == None:\n",
+        "      # empty\n",
+        "      self.head = new_node\n",
+        "      self.n = self.n + 1\n",
+        "      return\n",
+        "\n",
+        "    curr = self.head\n",
+        "\n",
+        "    while curr.next != None:\n",
+        "      curr = curr.next\n",
+        "\n",
+        "    # you are at the last node\n",
+        "    curr.next = new_node\n",
+        "    self.n = self.n + 1\n",
+        "\n",
+        "## insert data in middle (after the node) ----------------------\n",
+        "  def insert_after(self,after,value):\n",
+        "    new_node = Node(value)\n",
+        "    curr = self.head\n",
+        "\n",
+        "    while curr != None:\n",
+        "      if curr.data == after:\n",
+        "        break\n",
+        "      curr = curr.next\n",
+        "\n",
+        "    # case 1 break -> item apko mil gaya -> curr = not None\n",
+        "    if curr != None:\n",
+        "      #logic -> new node the next = jo abhi curr.next he\n",
+        "      new_node.next = curr.next\n",
+        "      curr.next = new_node # curr.next will make to new node\n",
+        "      self.n = self.n + 1\n",
+        "\n",
+        "    else:  # case 2 -> loop pura chala but item nahi meela -> curr = None\n",
+        "      return 'Item not found'\n",
+        "\n",
+        "# clear complete LL\n",
+        "  def clear(self):\n",
+        "    self.head = None\n",
+        "    self.n = 0\n",
+        "\n",
+        "  def delete_head(self):\n",
+        "\n",
+        "    if self.head == None:\n",
+        "      # empty\n",
+        "      return 'Empty LL'\n",
+        "\n",
+        "    self.head = self.head.next\n",
+        "    self.n = self.n - 1\n",
+        "\n",
+        "  def pop(self):\n",
+        "\n",
+        "    if self.head == None:\n",
+        "      # empty\n",
+        "      return 'Empty LL'\n",
+        "\n",
+        "    curr = self.head\n",
+        "\n",
+        "    # kya linked list me 1 item hai?\n",
+        "    if curr.next == None:\n",
+        "      # head hi hoga(delete from head)\n",
+        "      return self.delete_head()\n",
+        "\n",
+        "\n",
+        "    while curr.next.next != None:\n",
+        "      curr = curr.next\n",
+        "\n",
+        "    # curr -> 2nd last node\n",
+        "    curr.next = None\n",
+        "    self.n = self.n - 1\n",
+        "\n",
+        "  def remove(self,value):\n",
+        "\n",
+        "    if self.head == None:\n",
+        "      return 'Empty LL'\n",
+        "\n",
+        "    if self.head.data == value:\n",
+        "      # you want to remove the head node\n",
+        "      return self.delete_head()\n",
+        "\n",
+        "    curr = self.head\n",
+        "\n",
+        "    while curr.next != None:\n",
+        "      if curr.next.data == value:\n",
+        "        break\n",
+        "      curr = curr.next\n",
+        "\n",
+        "    # 2 cases item mil gaya\n",
+        "    # item nai mila\n",
+        "    if curr.next == None:\n",
+        "      # item nai mila\n",
+        "      return 'Not Found'\n",
+        "    else:\n",
+        "      curr.next = curr.next.next\n",
+        "      self.n = self.n - 1\n",
+        "\n",
+        "  def search(self,item):\n",
+        "\n",
+        "    curr = self.head\n",
+        "    pos = 0\n",
+        "\n",
+        "    while curr != None:\n",
+        "      if curr.data == item:\n",
+        "        return pos\n",
+        "      curr = curr.next\n",
+        "      pos = pos + 1\n",
+        "\n",
+        "    return 'Not Found'\n",
+        "\n",
+        "  def __getitem__(self,index):\n",
+        "\n",
+        "    curr = self.head\n",
+        "    pos = 0\n",
+        "\n",
+        "    while curr != None:\n",
+        "      if pos == index:\n",
+        "        return curr.data\n",
+        "      curr = curr.next\n",
+        "      pos = pos + 1\n",
+        "\n",
+        "    return 'IndexError'"
       ],
       "metadata": {
         "id": "9ujXlotwgeJc"
       },
-      "execution_count": 41,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -231,7 +368,7 @@
       "metadata": {
         "id": "bK_VceCvgpWs"
       },
-      "execution_count": 48,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -245,7 +382,7 @@
       "metadata": {
         "id": "20G0H8ffgyvv"
       },
-      "execution_count": 50,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -258,19 +395,95 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u8U2Oocvgvux",
-        "outputId": "410178fe-60e6-48d9-d089-f1dc262ec1df"
+        "outputId": "e5fb754a-ebfc-4765-ad11-c664e0479c41"
       },
-      "execution_count": 51,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "5"
+              "4"
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(L)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YWVOGc1J0GZo",
+        "outputId": "e8cd7663-a3a1-46e4-b69d-ccfd2924070d"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1000->100->10->1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L.clear()"
+      ],
+      "metadata": {
+        "id": "SGN6G0bv7HKI",
+        "outputId": "3f28855b-fcf9-4eb3-87b2-ecc94d9af446",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Empty Linked List'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(L)"
+      ],
+      "metadata": {
+        "id": "i7uM2aH3jCcz",
+        "outputId": "db0e221d-7dca-4ed8-fa1d-a606d0183522",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n"
+          ]
         }
       ]
     },
@@ -278,7 +491,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "YWVOGc1J0GZo"
+        "id": "cmr_jgBsjDdV"
       },
       "execution_count": null,
       "outputs": []
