--- a/2_linked_list.ipynb
+++ b/2_linked_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM27IVKZSzrrBtR+nDM+/gL",
+      "authorship_tag": "ABX9TyPn+o1BI/f8CcEwoW/yvnzh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "3vUghh6HusrI"
       },
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "YFKGtQKeZMnm"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
         "id": "NbDkcpDIZlag",
         "outputId": "7ca203e7-fe32-4dd6-cf77-7b35620ed669"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +105,7 @@
       "metadata": {
         "id": "WKjh7rBdZpAU"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
         "id": "dgOXVOCuZ0GV",
         "outputId": "d9e19987-437e-46c6-d060-5dd1840832bf"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
         "id": "c3URDFkeZ9Sj",
         "outputId": "1de9cf54-e572-43c8-f1b3-396dd943d9dc"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
         "id": "1UoIcW8FaCzV",
         "outputId": "60b3e570-1f96-4a92-fe9b-59aee075daae"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
       "metadata": {
         "id": "d4Syu4SJaR9w"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -357,7 +357,7 @@
       "metadata": {
         "id": "9ujXlotwgeJc"
       },
-      "execution_count": 17,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -368,7 +368,7 @@
       "metadata": {
         "id": "bK_VceCvgpWs"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +382,7 @@
       "metadata": {
         "id": "20G0H8ffgyvv"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -397,7 +397,7 @@
         "id": "u8U2Oocvgvux",
         "outputId": "e5fb754a-ebfc-4765-ad11-c664e0479c41"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +423,7 @@
         "id": "YWVOGc1J0GZo",
         "outputId": "e8cd7663-a3a1-46e4-b69d-ccfd2924070d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +447,7 @@
           "height": 36
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,7 +476,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,9 +489,72 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "w = Linkedlist()"
+      ],
       "metadata": {
         "id": "cmr_jgBsjDdV"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w.append('T')\n",
+        "w.append('h')\n",
+        "w.append('e')\n",
+        "w.append('/')\n",
+        "w.append('i')\n",
+        "w.append('n')\n",
+        "w.append('d')\n",
+        "w.append('/')\n",
+        "w.append('*')\n",
+        "w.append('e')\n",
+        "w.append('t')\n",
+        "w.append('s')\n",
+        "w.append('/')\n",
+        "w.append('*')\n",
+        "w.append('p')\n",
+        "w.append('a')\n",
+        "w.append('v')\n",
+        "w.append('e')\n",
+        "w.append('l')\n"
+      ],
+      "metadata": {
+        "id": "vivWXWrPv5H3"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(w)"
+      ],
+      "metadata": {
+        "id": "INkqmOaRv5As",
+        "outputId": "9aaa453e-8e47-4599-e93d-a5523cf12bbd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "T->h->e->/->I->n->d->e->e->r->n->e->t->s->T->h->e->/->I->n->d->e->e->r->n->/->*->e->t->s->/->*->p->a->v->e->l->T->h->e->/->i->n->d->/->*->e->t->s->/->*->p->a->v->e->l\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_yWv3ZdxwYob"
       },
       "execution_count": null,
       "outputs": []
