--- a/00_Problem.ipynb
+++ b/00_Problem.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO3gXbo0nMrnt79IlK6loFr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "baWs3Jz-3eUQ",
         "outputId": "474579cf-1117-4ee9-b2bb-c0541f86b471",
@@ -77,7 +76,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,13 +88,40 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "2. Find out sum of odd numbers in a list?"
+      ],
       "metadata": {
-        "id": "WodwBHJa5QSc"
+        "id": "aTL_J3PU8FnT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list = [1, 2, 3, 4, 5]\n",
+        "\n",
+        "odd_sum = sum([x for x in my_list if x % 2 != 0])\n",
+        "\n",
+        "print(odd_sum)"
+      ],
+      "metadata": {
+        "id": "60WwnjTo708W",
+        "outputId": "d0a9a105-7ac1-4228-c00d-71938b87f6d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 4,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
     }
   ]
 }
