--- a/Py_Basic.ipynb
+++ b/Py_Basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtKKu2LjuwnCiExFmBIrsC",
+      "authorship_tag": "ABX9TyOdAoHsVGc+DNHU+EAlVT1X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,30 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# Operators in Python\n",
+        "\n",
+        "- **Arithmetic**: `+`, `-`, `*`, `/`, `%`, `**`, `//`\n",
+        "- **Comparison**: `==`, `!=`, `>`, `<`, `>=`, `<=`\n",
+        "- **Logical**: `and`, `or`, `not`\n",
+        "- **Bitwise**: `&`, `|`, `^`, `~`, `<<`, `>>`\n",
+        "- **Assignment**: `=`, `+=`, `-=`, `*=`, `/=`, `%=`, `**=`, `//=`\n",
+        "- **Identity**: `is`, `is not`\n",
+        "- **Membership**: `in`, `not in`"
+      ],
       "metadata": {
-        "id": "3P3H4nFPk-Bl"
+        "id": "JdlH09-EmOEM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LLTejZW9lzAr"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
