--- a/Py_Basic.ipynb
+++ b/Py_Basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdAoHsVGc+DNHU+EAlVT1X",
+      "authorship_tag": "ABX9TyOgdfy7wzloQCeZqYADbfV+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,9 +45,33 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import keyword\n",
+        "print(keyword.kwlist)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LLTejZW9lzAr",
+        "outputId": "8c0e553c-7811-4c93-a919-c57e78a069e2"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "LLTejZW9lzAr"
+        "id": "2LHS__RuqXDI"
       },
       "execution_count": null,
       "outputs": []
