Linear Search - Brute Force

--- a/Searching_Sorting_Algo.ipynb
+++ b/Searching_Sorting_Algo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4O2jvR2W1RVdSs4G+s1Bo",
+      "authorship_tag": "ABX9TyMTxZ/qyffBnn+Y2e7iBOjz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,8 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "# Linear Search - Brute Force"
+        "# Linear Search - Brute Force\n",
+        "Time Complexity is O(N)"
       ],
       "metadata": {
         "id": "Xyi_bZVkyQMy"
@@ -76,12 +77,12 @@
         "\"\"\""
       ],
       "metadata": {
-        "id": "3THX9bTUyNFB",
-        "outputId": "2c3d7a96-060d-4185-aa9c-08029a31c1c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        }
+        },
+        "id": "3THX9bTUyNFB",
+        "outputId": "2c3d7a96-060d-4185-aa9c-08029a31c1c3"
       },
       "execution_count": 27,
       "outputs": [
@@ -108,11 +109,11 @@
         "a"
       ],
       "metadata": {
-        "id": "tkvFrQcb02_6",
-        "outputId": "5fb300e8-46bf-46d4-e427-1e116108dbdc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tkvFrQcb02_6",
+        "outputId": "5fb300e8-46bf-46d4-e427-1e116108dbdc"
       },
       "execution_count": 25,
       "outputs": [
@@ -135,11 +136,11 @@
         "ls"
       ],
       "metadata": {
-        "id": "U159ZIVU4RaQ",
-        "outputId": "393e20e3-581a-4006-b8c8-820df26ec64c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U159ZIVU4RaQ",
+        "outputId": "393e20e3-581a-4006-b8c8-820df26ec64c"
       },
       "execution_count": 26,
       "outputs": [
